Add MOVIMIENTO_ENTRE_BANCOS as new category
