# app/models/enums.py
@@ -37,6 +37,7 @@ class Category(str, enum.Enum):
     PLATAFORMAS = "PLATAFORMAS"
     INGRESO = "INGRESO"
     INVERSION = "INVERSION"
+    MOVIMIENTO_ENTRE_BANCOS = "MOVIMIENTO_ENTRE_BANCOS"
     OTROS = "OTROS"
 
 
